--- a/templates/grados/editar.html
+++ b/templates/grados/editar.html
@@ -28,7 +28,12 @@
                     <label for="nivel" class="form-label required-field">Nivel</label>
                     <div class="input-icon">
                         <i class="fas fa-layer-group"></i>
-                        <input type="text" name="nivel" id="nivel" class="form-control" value="{{ grado.nivel }}" required maxlength="30">
+                        <select name="nivel" id="nivel" class="form-control" required>
+                            <option value="">Seleccione un nivel</option>
+                            <option value="Parvularia" {% if grado.nivel == 'Parvularia' %}selected{% endif %}>Parvularia</option>
+                            <option value="Básico" {% if grado.nivel == 'Básico' %}selected{% endif %}>Básico</option>
+                            <option value="Bachillerato" {% if grado.nivel == 'Bachillerato' %}selected{% endif %}>Bachillerato</option>
+                        </select>
                     </div>
                     <div class="invalid-feedback" id="nivelError"></div>
                 </div>
